# koch-ros2-wrapper

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
calibration/: left_follower.json  left_follower_follower.json  left_leader.json  left_leader_leader.json  right_follower.json  right_follower_follower.json  right_leader.json  right_leader_leader.json
config/: leader_follower.yaml  record.yaml  two_leader_follower.yaml
koch-ros2-wrapper/: ctrl_leader_follower.py
koch_wrapper/: ctrl_leader_follower.py  koch_follower_control.py  record.py
launch/: ctrl_leader_follower.launch.py  two_leader_follower_launch.py
src/: koch_arm_calibration.py  koch_leader_control.py  koch_leader_follower_control.py
