<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>koch_wrapper</name>
  <version>0.0.0</version>
  <description> ROS2 wrapper for Koch Robot Arm </description>
  <maintainer email="yoseph.huang@gmail.com">pomelo925</maintainer>
  <license>MIT</license>
  
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
